#pragma once

namespace rvc {

enum class Direction {
    FRONT,
    LEFT,
    RIGHT,
    BACK
};
} 